# fullstack_automation

./: .gitignore  README.md
.github/workflows/: e2e.yml  manual.yml  web.yml
docs/: api-components.puml  components.puml
src/api/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  api-server.sh  pyproject.toml  pytest.ini  tox.ini  uvicorn-log.ini
src/api/src/: UserInfo.py  UserOperations.py  app.py  errors.py
src/api/src/resources/: Health.py  UserInfo.py  UserOperations.py
src/api/src/storage/: UserInfoType.py  UsersInfoStorage.py  UsersInfoStorageInMemory.py
src/api/src/utils/: errors.py
src/api/tests/: conftest.py  constants.py
src/api/tests/functional/: add_user.py  conftest.py  delete_user.py  e2e.py  get_user_info.py  route_params.py  user.py  user_auth.py
src/api/tests/functional/utils/: auth.py  errors.py  user.py
src/api/tests/unit/: UsersInfoStorage.py  add_user.py  conftest.py  delete_user.py  get_info.py  user_auth.py
src/api/tests/unit/storage/: UsersInfoStorage.py
src/api/tests/utils/: auth.py
src/web/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  run-e2e-tests.sh  run-mocked-tests.sh  tsconfig.json  webpack.config.js
src/web/docs/: web-testing.puml  web-tests-run.puml
src/web/src/: index.html  login.ts  register.html  register.ts  server.ts  success.html  user_info.ts  welcome.html  welcome.ts
src/web/src/helpers/: api.ts  html.ts
src/web/tests/: playwright.config.ts  tsconfig.json
src/web/tests/helpers/: mockAPI.ts
src/web/tests/tests/: e2e.spec.ts  helpers.ts  (+2 more)
(+12 files in other folders)
